--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -94,7 +94,7 @@
 * [[Interlingua]]: [[porco#Interlingua|porco]]
 * Irish: {{t+|ga|muc|f|xs=Irish}}
 * Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}
-* Japanese: {{rfc-tbot}}{{t|ja|豚|tr=[[ぶた]], {{l|ja|buta}}}}
+* Japanese: {{t|ja|豚|tr=[[ぶた]], buta}}
 * [[Karelian]]: [[počči]]
 * Korean: {{t|ko|돼지|tr=dwaeji|sc=Kore}}
 * Kurdish: {{ku-Arab|[[به‌راز]]}} {{g|ku}}
@@ -125,15 +125,12 @@
 * [[Sami]]: [[spiidni]]
 * [[Samoan]]: {{t|sm|pua'a|xs=Samoan}}
 * [[Scottish Gaelic]]: [[muc]] {{f}}
-* Serbian:
-*: Cyrillic: [[свиња#Serbian|свиња]] {{f}}
-*: Roman: {{t|sh|svinja|f}}
-*: Roman: [[svinja#Serbian|svinja]] {{f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|свиња|f}}
-* Slovak: [[prasa]] {{n}} (1), {{t|sk|prasa|n}}
-* Slovene: [[svinja]] {{f}}, [[prašič]] {{m}}, [[pujs]] {{m}}, {{t|sl|svinja|f}}, {{t|sl|prašič|m}}, {{t|sl|pujs|m}}
-* Spanish: [[cerdo]] {{m}}, [[chancho]] {{m}} {{italbrac|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, [[chon]] {{m}} {{italbrac|Northern Central Spain|specifically Cantabria}}, [[coche]] {{m}} {{italbrac|Guatemala}}, [[cochi]] {{m}} {{italbrac|Northwestern Mexico}}, [[cochín]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[cochino]] {{m}} {{italbrac|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, [[cocho]] {{m}} {{italbrac|Northern Spain|specifically Leon}}, [[cuchi]] {{m}} {{italbrac|Northern Central and Northwestern Argentina}}, [[cuto]] {{m}} {{italbrac|Northern Spain - specifically Aragon, La Rioja and Navarra}}, [[gocho]] {{m}} {{italbrac|Northern Spain|specifically Asturias and Leon}}, [[gorrino]] {{italbrac|Southern Central and Eastern Central Spain}}, [[guarro]] {{m}} {{italbrac|Western Spain|specifically Extremadura}}, [[marrano]] {{m}} {{italbrac|Central and Western Venezuela|Colombia}}, [[puerco]] {{m}} {{italbrac|Caribbean Islands|Costa Rica|Mexico|Panama}}, [[tocino]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[tunco]] {{m}} {{italbrac|El Salvador}}
+*: Roman: {{t|sh|svinja|f}}
+* Slovak: {{t|sk|prasa|n}}
+* Slovene: {{t|sl|svinja|f}}, {{t|sl|prašič|m}}, {{t|sl|pujs|m}}
+* Spanish: {{t|es|cerdo|m}}, [[chancho]] {{m}} {{italbrac|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, [[chon]] {{m}} {{italbrac|Northern Central Spain|specifically Cantabria}}, [[coche]] {{m}} {{italbrac|Guatemala}}, [[cochi]] {{m}} {{italbrac|Northwestern Mexico}}, [[cochín]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[cochino]] {{m}} {{italbrac|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, [[cocho]] {{m}} {{italbrac|Northern Spain|specifically Leon}}, [[cuchi]] {{m}} {{italbrac|Northern Central and Northwestern Argentina}}, [[cuto]] {{m}} {{italbrac|Northern Spain - specifically Aragon, La Rioja and Navarra}}, [[gocho]] {{m}} {{italbrac|Northern Spain|specifically Asturias and Leon}}, [[gorrino]] {{italbrac|Southern Central and Eastern Central Spain}}, [[guarro]] {{m}} {{italbrac|Western Spain|specifically Extremadura}}, [[marrano]] {{m}} {{italbrac|Central and Western Venezuela|Colombia}}, [[puerco]] {{m}} {{italbrac|Caribbean Islands|Costa Rica|Mexico|Panama}}, [[tocino]] {{m}} {{italbrac|Northern Spain|specifically Aragon}}, [[tunco]] {{m}} {{italbrac|El Salvador}}
 * Swahili: {{t+|sw|nguruwe|xs=Swahili}}, {{t+|sw|nguruwe|xs=Swahili}}
 * Swedish: {{t+|sv|gris|c}}, {{t+|sv|svin|n}}
 * [[Tagalog]]: [[baboy]]
