--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|enm}} {{term|pigge|lang=enm}} 'pig, piglet', from {{etyl|ang}} {{term||picga}} (attested only in compounds, like {{term|picgbread|lang=ang|picgbrēad}} 'mast, pig's food'), pet-form related to Low German {{term|Pugge|lang=nds}} 'pet pig'. Of uncertain origin.
+{{etyl|enm}} {{term|pigge||pig, piglet|lang=enm}}, from {{etyl|ang}} {{term||picga}} (attested only in compounds, such as {{term|picgbread|picgbrēad|mast, pig's food|lang=ang}}), pet-form related to {{etyl|gmw-lge|-}} {{term|Pugge||pet pig|lang=nds}}. Of uncertain origin.
 
 ===Pronunciation===
 * {{IPA|/pɪɡ/}}
