--- a/en/r/reapportionment.741526.wikitext
+++ b/en/r/reapportionment.741526.wikitext
@@ -9,4 +9,7 @@
 # The act of [[reapportion]]ing; a second or subsequent [[apportionment]].
 # {{US|politics}} Reassignment of representation in a legislature, especially of U.S. House of Representative seats in accord with changes in the census population determination.
 
+===See also===
+* [[redistrict]]ing
+
 [[zh:reapportionment]]
