--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -4,7 +4,8 @@
 ===Proper noun===
 {{en-proper noun}}
 
-
+# a language spoken mostly in the province of [[Friesland]], in the north of the Netherlands; West Lauwers Frisian, one of the three [[West Frisian]] languages (or language varieties)
+# {{context|Netherlands}} the West Frisian [[dialect]] of [[Dutch]] dialect spoken in the province of [[North Holland]], related to West Frisian language
 
 ====Usage notes====
 Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be varieties of a single language called “'''Frisian'''”.  Other linguists and the speakers consider them to be separate languages in a language group called “'''Frisian'''”.
