--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -75,6 +75,8 @@
 
 # To hunt [[game]] with ferrets.
 # To [[uncover]] and bring to [[light]] by [[searching]]; usually to ''ferret out''.
+#* '''1922''', {{w|Virginia Woolf}}, ''{{w|Jacob's Room}}'' Chapter 1
+#*:She '''ferreted''' in her bag; then held it up mouth downwards; then fumbled in her lap, all so vigorously that Charles Steele in the Panama hat suspended his paint-brush.
 
 [[Category:Mustelids]]
 
