--- a/en/e/even so.742278.wikitext
+++ b/en/e/even so.742278.wikitext
@@ -10,6 +10,7 @@
 {{trans-top|despite the contrary}}
 * [[Catalan]]: {{t|ca|tot i així}}, {{t|ca|tot i això}}
 * Dutch: {{t|nl|desondanks}}, {{t|nl|zelfs dan}}, {{t|nl|toch}}
+* Hebrew: {{t|he|בכל זאת|tr=bekhol zot|alt=בְּכָל זֹאת|sc=Hebr}}
 * Mandarin: {{t|cmn|即使这样|sc=Hani}}
 {{trans-mid}}
 * Russian: {{t|ru|несмотря на это|sc=Cyrl}}
