--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -108,11 +108,11 @@
 * German: {{t+|de|einfach}}, {{t+|de|simpel}}
 * [[Haitian Creole]]: {{tø|ht|senp}}
 * Hebrew: {{t-|he|פשוט}}
-* {{trreq|Hindi}}
+* Hindi: {{t|hi|सरल|tr=saral|sc=Deva}}, {{t|hi|आसान|tr=āsān|sc=Deva}}
 * Hungarian: {{t+|hu|egyszerű}}
 * [[Ido]]: {{t+|io|simpla|xs=Ido}}
 * Italian: {{t+|it|semplice}}
-* Japanese: [[簡単な]] (kantan na), [[単純な]] (tanjun na)
+* Japanese: [[簡単な]] (kantan na), [[単純な]] (tanjun na), {{t|ja|簡単|tr=かんたんな, kantan-na|alt=簡単な|sc=Jpan}}, {{t|ja|単純|tr=たんじゅんな, tanjun-na|alt=単純な|sc=Jpan}}
 {{trans-mid}}
 * Kazakh: {{t|kk|қарапайым|tr=qarapayım|sc=Cyrl|xs=Kazakh}}
 * Korean: [[간단한]] (gandanhan)
@@ -132,8 +132,10 @@
 * Swedish: {{t+|sv|enkel}}
 * [[Tamil]]: {{t|ta|எளிய |tr=eḷiya|xs=Tamil}}, {{t|ta|எளிது |tr=eḷitu|xs=Tamil}}, {{t|ta|எளிமையான|tr=eḷimaiyāNa|xs=Tamil}}
 * [[Telugu]]: [[సరళమైన]] (saraLamaina)
-* Thai: {{Thai|[[ง่าย]]}} (ngâai)
+* Thai: {{Thai|[[ง่าย]]}} (ngâai), {{t|th|ง่าย|tr=ngâai|sc=Thai}}
 * Turkish: {{t+|tr|basit}}, {{t+|tr|sade}}
+* Ukrainian: {{t|uk|простий|tr=prostýj|sc=Cyrl}}
+* Urdu: {{t|ur|آسان|tr=āsān|sc=ur-Arab}}
 * Vietnamese: {{t|vi|giản dị|xs=Vietnamese}}, {{t|vi|mộc mạc|xs=Vietnamese}}
 * [[West Frisian]]: {{t|fy|ienfâldich|xs=West Frisian}}
 {{trans-bottom}}
