--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -15,7 +15,7 @@ From the {{etyl|fa}} {{fa-Arab|[[پايجامه]]}} {{IPA|/pɑjʤɑme}}/ meaning
 {{wikipedia}}
 {{en-noun|-}} {{pluralonly}}
 
-# {{US}} [[clothes|Clothes]] for wearing to bed and sleeping in, usually consisting of a loose-fitting shirt and pants.
+# [[clothes|Clothes]] for wearing to bed and sleeping in, usually consisting of a loose-fitting shirt and pants/trousers.
 # Loose-fitting [[trousers]] worn by both sexes in various southern Asian countries including [[India]].
 
 ====Translations====
