--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -29,6 +29,7 @@ From {{etyl|enm}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a fr
 * Italian: [[qua qua]] {{m}}
 * Japanese: {{t|ja|ガー ガー|tr=gā-gā}}, {{t|ja|クェッ クェッ|tr=quek-quek}}, {{t|ja|クワッ クワッ|tr=quwak-quwak}}
 * [[Macedonian]]: {{t-|mk|квак|tr=kvák}}
+* Polish: {{t|pl|kwa}}
 * Russian: {{t-|ru|кря-кря|tr=kr'a-kr'a}}, {{t+|ru|кряканье|n|tr=kr'ákan'je}}
 * Spanish: {{t|es|cuac|m}}
 * Swedish: {{t+|sv|kvack|n}}
@@ -58,6 +59,7 @@ From {{etyl|enm}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a fr
 {{trans-mid}}
 * Italian: [[fare]] [[qua qua]]
 * Japanese: {{qualifier|duck}} {{t|ja|ガーガーと鳴く|tr=gā-gā to naku}}, {{qualifier|colloquial|human}} {{t|ja|ガヤガヤしゃべる|tr=gayagaya shaberu}}
+* Polish: {{t|pl|kwakać}}
 * Romanian: [[măcăi]]
 * Russian: [[крякать]] (kr'ákat’) {{impf}}, [[крякнуть]] (kr'áknut’) {{pf.}}
 * Spanish: [[decir]] [[cuac]]
@@ -120,6 +122,7 @@ c 1630, shortening of [[quacksalver]], from {{etyl|dum|en}} {{term|kwaksalver||l
 * Icelandic: {{t|is|fúskari|m}},  {{t|is|loddari|m}},  {{t-|is|falsari|m}},  {{t|is|svikari|m}}
 * Italian: {{t+|it|ciarlatano|m}}, {{t|it|imbonitore|m}}, {{t|it|pataccaro|m}}
 * Japanese: {{t|ja|ペテン師|tr=peten-shi}}
+* Polish: {{t|pl|szarlatan|m}}
 * Portuguese: {{t|pt|charlatão|m}}
 * Russian: {{t+|ru|шарлатан|m|tr=šarlatán}}
 * Spanish: {{t+|es|charlatán|m}}
@@ -127,8 +130,9 @@ c 1630, shortening of [[quacksalver]], from {{etyl|dum|en}} {{term|kwaksalver||l
 
 {{trans-top|doctor}}
 * Italian: {{t|it|mediconzolo}}
-* Portuguese: {{t|pt|curandeiro|m}}
+* Polish: {{t|pl|medyk|m}}
 {{trans-mid}}
+* Portuguese: {{t|pt|curandeiro|m}}
 * Spanish: {{t-|es|curandero|m}}
 {{trans-bottom}}
 
@@ -137,7 +141,6 @@ c 1630, shortening of [[quacksalver]], from {{etyl|dum|en}} {{term|kwaksalver||l
 * {{ttbc|id}}: [[kwek-kwek]] (1), [[gadungan]] (2, 3)
 * {{ttbc|ia}}: [[quac]] (1)
 {{trans-mid}}
-* {{ttbc|pl}}: [[kwak]] (1) [[szarlatan]] (2,3) [[konował]] (4)
 * {{ttbc|ro}}: [[mac]] (1) [[şarlatan]] {{m}}
 * {{ttbc|es}}: [[curandero]] {{m}}, [[matasanos]] {{m}}
 {{trans-bottom}}
