--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -38,7 +38,7 @@ Unknown origin, though came to be associated with French {{term|dormir||to sleep
 * Greek: [[δασομυωξός]] {{m}}
 * Hungarian: {{t+|hu|pele}}
 * Icelandic: {{t|is|heslimús}}
-* Irish: [[luch hodlamáin]], [[dallóg fhéir]]
+* Irish: [[luch hodlamáin]], [[dallóg fhéir]], {{t|ga|luch chodlamáin|f}}, {{t|ga|dallóg fhéir|f}}
 * Italian: {{t+|it|ghiro|m}}, {{t+|it|moscardino|m}}
 * Japanese: {{t|ja|ヤマネ|tr=yamane}}
 * [[Ladin]]: [[ghiro]]
