--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -88,6 +88,7 @@
 * Esperanto: {{t|eo|muelejo}}
 * Finnish: {{t+|fi|mylly}}
 {{trans-mid}}
+* French: {{t|fr|moulin}}
 * Greek: {{t+|el|μύλος|m|tr=mýlos}}
 * Latvian: {{t|lv|maltuve}}
 * [[Scottish Gaelic]]: {{t-|gd|muileann|m|f|xs=Scottish Gaelic}}
