--- a/en/u/unisexual.802726.wikitext
+++ b/en/u/unisexual.802726.wikitext
@@ -8,7 +8,9 @@
 
 ====Translations====
 {{trans-top|having characteristics of a single sex}}
+* Irish: {{t|ga|aonghnéasach}}
 {{trans-mid}}
+* Italian: {{t|it|unisessuale}}
 {{trans-bottom}}
 
 [[io:unisexual]]
