--- a/en/w/whithering.746847.wikitext
+++ b/en/w/whithering.746847.wikitext
@@ -7,7 +7,7 @@
 * {{homophones|withering}}
 
 ===Verb===
-{{infl|en|verb-form}}
+{{infl|en|verb form}}
 
 # {{obsolete}} {{present participle of|whither}}
 
