--- a/en/j/Jacobin.855478.wikitext
+++ b/en/j/Jacobin.855478.wikitext
@@ -7,6 +7,7 @@
 # A member of the most radical club founded during the French Revolution, which instituted the Reign of Terror.
 # An extreme political [[radical]].
 # A [[Dominican]] [[friar]] 
+# A [[breed]] of [[domestic pigeon]] (known for its feathered hood over its head).
 
 ===References===
 *Collins Shorter English Dictionary
