--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -121,7 +121,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|月代}} ({{l|ja|つきしろ}}, [[tsukishiro]]):
 * {{l|ja|月並み}} ({{l|ja|つきなみ}}, [[tsukinami]]):
 * {{l|ja|月餅}} ({{l|ja|げっぺい}}, geppei): "moon cake"
-* {{l|ja|月末}} ({{l|ja|げつまつ}}, getsumatsu): "the end of the month"
+* {{l|ja|月末}} ({{l|ja|げつまつ}}, getsumatsu): "''the end of the month''"
 * {{l|ja|月日}} ({{l|ja|つきひ}}, {{l|ja|がっぴ}}, tsukihi, gappi):
 * {{l|ja|月旦}} ({{l|ja|げったん}}, gettan):
 * {{l|ja|有明の月}} ({{l|ja|ありあけのつき}}, [[ariake no tsuki]]):
@@ -130,6 +130,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|日月}} ({{l|ja|じつげつ}}, jitsugetsu):
 * {{l|ja|新月}} ({{l|ja|しんげつ}}, [[shingetsu]]): [[new moon]]
 * {{l|ja|月型}} (''tsukigata'') or {{l|ja|月形}} (''tsukigata''): [[crescent moon]]
+* {{l|ja|凹月}} ({{l|ja|おうげつ}}, ''ōgetsu''/''āogetsu''): lit. "''[[concave]] moon''" - a crescent moon
 * {{l|ja|半月}} ({{l|ja|はんげつ}}, [[hangetsu]]): [[half moon]]
 * {{l|ja|凸月}} ({{l|ja|とつげつ}}, [[totsugetsu]]: [[gibbous moon]]
 * {{l|ja|満月}} ({{l|ja|まんげつ}}, [[mangetsu]]): [[full moon]]
