--- a/en/w/whithering.746847.wikitext
+++ b/en/w/whithering.746847.wikitext
@@ -4,8 +4,8 @@
 * {{homophones|withering}}
 
 ===Verb===
-{{infl|en|verb form|head=whither[[-ing|ing]]}}
+'''whithering'''
 
-# {{obsolete}} {{present participle of|whither}}
+# {{obsolete}} {{present participle of|[[whither]]}}
 
 [[fr:whithering]]
