--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -22,6 +22,7 @@
 {{trans-top|alternative or hidden reason}}
 * Chinese:
 *: Mandarin: [[不可告人]][[的]][[動機]], [[不可告人]][[的]][[动机]] (bùkěgàorén de dòngjī), {{qualifier|to have an ulterior motive}} [[別有用心]], [[别有用心]] (biéyǒuyòngxīn)
+* Danish: {{t|da|bagtanke|c}}
 {{trans-mid}}
 * Dutch: {{t|nl|verborgen beweegredenen}}
 * Finnish: {{t+|fi|taka-ajatus}}
