--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -11,19 +11,19 @@
 {{en-noun}}
 
 # a small [[change]]; a minor [[correction]]; a [[modification]]
-#* ''The credit card company made an '''adjustment''' to my account to waive the late fee.''
+#: ''The credit card company made an '''adjustment''' to my account to waive the late fee.''
 # {{psychology}} The behavioural process of balancing conflicting needs, or needs against obstacles in the environment.
-#*''When Jim graduated, he found '''adjustment''' to the working world difficult.''
+#: ''When Jim graduated, he found '''adjustment''' to the working world difficult.''
 
 ====Synonyms====
+{{checksyns}}
 * [[change]]
 * [[correction]]
 * [[modification]]
 
 ====Related terms====
-* [[adjust]]
-* [[correct]]
-* [[modify]]
+* [[adjustable]]
+* [[adjuster]]
 
 ====Translations====
 {{trans-top|small change}}
