--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -141,8 +141,10 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 {{bottom}}
 
 ====Derived terms====
-* {{l|ja|中秋の名月}}: the "''[[harvest moon]]''"
-* {{l|ja|猟師月}}: lit. the "''[[hunter's moon]]''"
+* {{l|ja|中秋の名月}}: the "''[[Autumn]] [[festival]] of the [[harvest moon]]''"
+* {{l|ja|収穫月}} ({{l|ja|しゅうかくげつ}}, ''shūkaku-getsu''): lit. the "''[[harvest moon]]''"
+* {{l|ja|猟師月}} ({{l|ja|りょうしげつ}}, ''ryōshi-getsu''): lit. the "''[[hunter's moon]]''"
+* {{l|ja|青月}} ({{l|ja|あおいげつ}}, ''aoigetsu''): lit. a/the "''[[blue moon]]''"
 * {{l|ja|月の都}} ({{l|ja|つきのみやこ}}, ''tsuki-no-miyako''): lit. the "''([[capital]]) [[city]] of the [[moon]]''" -- from [[w:The Tale of the Bamboo Cutter|The Tale of the Bamboo Cutter]]
 * {{l|ja|月の王国}} ({{l|ja|つきのおうこく}}, ''tsuki-no-ōkoku''): lit. the "''[[kingdom]] of the moon''" -- "''the Moon Kingdom''"
 * {{l|ja|月城}} ({{l|ja|つきしろ}}, ''tsuki shiro''): lit. "''[[moon]] [[castle]]''"
