--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -141,7 +141,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 {{bottom}}
 
 ====Derived terms====
-* {{l|ja|中秋の名月}}: the "''[[Autumn]] [[festival]] of the [[harvest moon]]''"
+* {{l|ja|中秋の名月}}: the "''[[mid|Mid]]-[[Autumn]] [[harvest moon|Harvest Moon]] [[festival|Festival]]''"
 * {{l|ja|収穫月}} ({{l|ja|しゅうかくげつ}}, ''shūkaku-getsu''): lit. the "''[[harvest moon]]''"
 * {{l|ja|猟師月}} ({{l|ja|りょうしげつ}}, ''ryōshi-getsu''): lit. the "''[[hunter's moon]]''"
 * {{l|ja|青月}} ({{l|ja|あおいげつ}}, ''aoigetsu''): lit. a/the "''[[blue moon]]''"
