--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -101,41 +101,40 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 
 ====Compounds====
 {{top3}}
-* {{l|ja|月下氷人}} ({{l|ja|げっかひょうじん}}, [[gekkahyōjin]]): [[matchmaker]]
-* {{l|ja|月影}} ({{l|ja|つきかげ}}, [[tsukikage]]): [[moonlight]]
-* {{l|ja|月額}} ({{l|ja|げつがく}}, [[getsugaku]]): [[monthly]] [[amount]]
-* {{l|ja|月刊}} ({{l|ja|げっかん}}, [[gekkan]]): [[monthly]] [[publication]]
-* {{l|ja|月極}} ({{l|ja|つきぎめ}}, [[tsukigime]]): [[monthly]]
-* {{l|ja|月経}} ({{l|ja|げっけい}}, [[gekkei]]): [[menstruation]]
-* {{l|ja|月桂樹}} ({{l|ja|げっけいじゅ}}, [[gekkeiju]]): [[laurel]] [[tree]]
-* {{l|ja|月光}} ({{l|ja|げっこう}}, [[gekkō]]): [[moonlight]]
-* {{l|ja|月蝕}}{{l|ja|、}}{{l|ja|月食}} ({{l|ja|げっしょく}}, [[gesshoku]]): [[lunar eclipse]]
-* {{l|ja|月卿}} ({{l|ja|げっけい}}, gekkei)
-* {{l|ja|月次}} ({{l|ja|げつじ}}, getsuji)
-* {{l|ja|月賦}} ({{l|ja|げっぷ}}, [[geppu]]): [[monthly]] [[payment]]
+* {{l|ja|月下氷人}} ({{l|ja|げっかひょうじん}}, ''[[gekkahyōjin]]''): [[matchmaker]]
+* {{l|ja|月影}} ({{l|ja|つきかげ}}, ''[[tsukikage]]''): [[moonlight]]
+* {{l|ja|月額}} ({{l|ja|げつがく}}, ''[[getsugaku]]''): [[monthly]] [[amount]]
+* {{l|ja|月刊}} ({{l|ja|げっかん}}, ''[[gekkan]]''): [[monthly]] [[publication]]
+* {{l|ja|月極}} ({{l|ja|つきぎめ}}, ''[[tsukigime]]''): [[monthly]]
+* {{l|ja|月経}} ({{l|ja|げっけい}}, ''[[gekkei]]''): [[menstruation]]
+* {{l|ja|月桂樹}} ({{l|ja|げっけいじゅ}}, ''[[gekkeiju]]''): [[laurel]] [[tree]]
+* {{l|ja|月光}} ({{l|ja|げっこう}}, ''[[gekkō]]''): [[moonlight]]
+* {{l|ja|月蝕}}{{l|ja|、}}{{l|ja|月食}} ({{l|ja|げっしょく}}, ''[[gesshoku]]''): [[lunar eclipse]]
+* {{l|ja|月卿}} ({{l|ja|げっけい}}, ''gekkei''): [[noble]]s/[[officer]]s [[month]]
+* {{l|ja|月次}} ({{l|ja|げつじ}}, ''getsuji''): [[monthly]]
+* {{l|ja|月賦}} ({{l|ja|げっぷ}}, ''[[geppu]]''): [[monthly]] [[payment]]
 {{mid3}}
-* {{l|ja|月末}}
-* {{l|ja|月曜}}{{l|ja|、}}{{l|ja|月曜日}} ({{l|ja|げつようび|げつよう(び)}}, [[getsuyōbi|getsuyō(bi)]]): [[Monday]]
+* {{l|ja|月曜}}{{l|ja|、}}{{l|ja|月曜日}} ({{l|ja|げつようび|げつよう(び)}}, [[getsuyōbi|getsuyō(bi)]]): "''[[Mondays]], [[Monday]]''"
 * {{l|ja|月例}} ({{l|ja|げつれい}}, [[getsurei]]): [[monthly]]
-* {{l|ja|月齢}} ({{l|ja|げつれい}}, [[getsurei]]):
-* {{l|ja|月代}} ({{l|ja|つきしろ}}, [[tsukishiro]]):
-* {{l|ja|月並み}} ({{l|ja|つきなみ}}, [[tsukinami]]):
-* {{l|ja|月餅}} ({{l|ja|げっぺい}}, geppei): "moon cake"
+* {{l|ja|月齢}} ({{l|ja|げつれい}}, [[getsurei]]): lit. "''moon [[age]]'';" the [[phase]](s) of the moon
+* {{l|ja|月代}} ({{l|ja|つきしろ}}, [[tsukishiro]]): [[lunar]] [[era]]
+* {{l|ja|月並み}} ({{l|ja|つきなみ}}, [[tsukinami]]): [[mediocrity]]
+* {{l|ja|月餅}} ({{l|ja|げっぺい}}, geppei): lit. a "''[[moon cake]]''"
 * {{l|ja|月末}} ({{l|ja|げつまつ}}, getsumatsu): "''the end of the month''"
-* {{l|ja|月日}} ({{l|ja|つきひ}}, {{l|ja|がっぴ}}, tsukihi, gappi):
-* {{l|ja|月旦}} ({{l|ja|げったん}}, gettan):
-* {{l|ja|有明の月}} ({{l|ja|ありあけのつき}}, [[ariake no tsuki]]):
+* {{l|ja|月日}} ({{l|ja|つきひ}}, {{l|ja|がっぴ}}, tsukihi, gappi): "''of [[birth]]''"
+* {{l|ja|月旦}} ({{l|ja|げったん}}, gettan): lit. "''moon [[rise]]/[[dawn]]''" 
+* {{l|ja|有明の月}} ({{l|ja|ありあけのつき}}, [[ariake no tsuki]]): lit. "''[[month]]/[[moon]] of the [[new year]]''"
 * {{l|ja|日進月歩}} ({{l|ja|にっしんげっぽ}}, [[nisshingeppo]]): [[rapid]] [[advance]]
 {{mid3}}
-* {{l|ja|日月}} ({{l|ja|じつげつ}}, jitsugetsu):
+* {{l|ja|日月}} ({{l|ja|じつげつ}}, jitsugetsu): "''[[life]] & [[livelihood]]''," "''[[sun]] & moon''"
 * {{l|ja|新月}} ({{l|ja|しんげつ}}, [[shingetsu]]): [[new moon]]
-* {{l|ja|月型}} (''tsukigata'') or {{l|ja|月形}} (''tsukigata''): [[crescent moon]]
+* {{l|ja|月形}} (''tsukigata''; (or {{l|ja|月型}} (''tsukigata'')): [[crescent moon]]
 * {{l|ja|凹月}} ({{l|ja|おうげつ}}, ''ōgetsu''/''āogetsu''): lit. "''[[concave]] moon''" - a [[crescent]] moon
 * {{l|ja|半月}} ({{l|ja|はんげつ}}, [[hangetsu]]): [[half moon]]
-* {{l|ja|凸月}} ({{l|ja|とつげつ}}, [[totsugetsu]]: [[gibbous moon]]
+* {{l|ja|凸月}} ({{l|ja|とつげつ}}, [[totsugetsu]]): [[gibbous moon]]
 * {{l|ja|満月}} ({{l|ja|まんげつ}}, [[mangetsu]]): [[full moon]]
-* {{l|ja|盛月}} or {{l|ja|増月}}: [[waxing moon]]
-* {{l|ja|衰月}} or {{l|ja|減月}}: [[waning moon]]
+* {{l|ja|盛月}} or {{l|ja|増月}}: lit. "''[[heightening]]/[[increasing]] moon'';" [[waxing moon]]
+* {{l|ja|衰月}} or {{l|ja|減月}}: lit. "''[[declining]]/[[reducing]] moon'';" [[waning moon]]
 * {{l|ja|毎月}} ({{l|ja|まいげつ}}, [[maigetsu]]): [[every]] [[month]]
 * {{l|ja|月の側暗い}}: lit. the "''[[dark]] [[side]] of the [[moon]]''"
 {{bottom}}
