--- a/en/u/unexpectedness.742224.wikitext
+++ b/en/u/unexpectedness.742224.wikitext
@@ -1,7 +1,17 @@
 ==English==
+
+===Etymology===
+{{suffix|unexpected|ness}}
+
 ===Noun===
 {{en-noun|-}}
+
 # The state of being [[unexpected]].
+
+====Translations====
+{{trans-top|the state of being unexpected}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[hy:unexpectedness]]
 [[vi:unexpectedness]]
