--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -66,6 +66,7 @@ From {{etyl|la}} ''[[consumere]]''.
 * Norwegian: {{t+|no|fortære}}
 * Persian: {{t|fa|مصرف کردن|sc=fa-Arab}}
 * Romanian: {{t-|ro|consuma}}
+* Vietnamese: {{t|vi|ăn}}
 {{trans-bottom}}
 
 {{trans-top|to occupy}}
