--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -87,6 +87,7 @@ From {{etyl|la}} ''[[consumere]]''.
 * Hungarian: {{t+|hu|elpusztít}}
 * Italian: {{t|it|consumare}}
 * Persian: {{t|fa|نابود شدن|sc=fa-Arab}}
+* Vietnamese: {{t|vi|tàn phá}}
 {{trans-bottom}}
 
 {{checktrans}}
