--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -24,6 +24,7 @@
 * Armenian: {{t-|hy|ծաղկակաղամբ|tr=çaġkakaġamb}}
 * [[Basque]]: {{t|eu|azalore|xs=Basque}}
 * Bulgarian: {{t|bg|карнабит|m}},  {{t-|bg|карфиол|m}}
+* Burmese: {{t|my|ဂေါ်ဖီပန်း|tr=gàw-bì-pán|sc=Mymr}}
 * Chinese:
 *: Mandarin: {{t|cmn|花椰菜|tr=huāyēcài|sc=Hani}},  {{t|cmn|菜花|tr=càihuā|sc=Hani}}
 * Czech: {{t-|cs|květák|m}}, {{t-|cs|karfiól|m}}
