--- a/en/c/crabbit.720291.wikitext
+++ b/en/c/crabbit.720291.wikitext
@@ -5,7 +5,7 @@ Scots form of English ''[[crabbed]]''.
 ===Adjective===
 {{sco-adj}}
 
-# [[ill-tempered]], [[grouchy]], Graham Melvin
+# [[ill-tempered]], [[grouchy]]
 
 [[ja:crabbit]]
 [[vi:crabbit]]
