--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -136,7 +136,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|満月}} ({{l|ja|まんげつ}}, [[mangetsu]]): [[full moon]]
 * {{l|ja|盛月}} or {{l|ja|増月}}: lit. "''[[heightening]]/[[increasing]] moon'';" [[waxing moon]]
 * {{l|ja|衰月}} or {{l|ja|減月}}: lit. "''[[declining]]/[[reducing]] moon'';" [[waning moon]]
-* {{l|ja|毎月}} ({{l|ja|まいげつ}}, [[maigetsu]]): [[every]] [[month]]
+* {{l|ja|毎月}} ({{l|ja|まいつき}}, [[maigetsu]]): [[every]] [[month]]
 * {{l|ja|月の側暗い}}: lit. the "''[[dark]] [[side]] of the [[moon]]''"
 {{bottom}}
 
