--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -66,9 +66,18 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 # moon
 
 ====Derived terms====
-
-* {{l|ja|月夜}} (tsukuyo)
-* {{l|ja|月読}}, {{l|ja|月夜見}} (tsukuyomi)
+* {{l|ja|月夜}} (''tsukuyo'')
+* {{l|ja|月読}}, {{l|ja|月夜見}} (''tsukuyomi'')
+* {{l|ja|中秋の名月}}: the "''[[mid|Mid]]-[[Autumn]] [[harvest moon|Harvest Moon]] [[festival|Festival]]''"
+* {{l|ja|収穫月}} ({{l|ja|しゅうかくげつ}}, ''shūkaku-getsu''): lit. the "''[[harvest moon]]''"
+* {{l|ja|猟師月}} ({{l|ja|りょうしげつ}}, ''ryōshi-getsu''): lit. the "''[[hunter's moon]]''"
+* {{l|ja|青月}} ({{l|ja|あおいげつ}}, ''aoigetsu''): lit. a/the "''[[blue moon]]''"
+* {{l|ja|月の都}} ({{l|ja|つきのみやこ}}, ''tsuki-no-miyako''): lit. the "''([[capital]]) [[city]] of the [[moon]]''" -- from [[w:The Tale of the Bamboo Cutter|The Tale of the Bamboo Cutter]]
+* {{l|ja|月の王国}} ({{l|ja|つきのおうこく}}, ''tsuki-no-ōkoku''): lit. the "''[[kingdom]] of the moon''" -- "''the Moon Kingdom''"
+* {{l|ja|月城}} ({{l|ja|つきしろ}}, ''tsuki-shiro''): lit. "''[[moon]] [[castle]]''"
+* {{l|ja|月宮殿}} ({{l|ja|つききゅうでん}}, ''tsuki-kyūden''): lit. "''[[moon]] [[palace]]''"
+* {{l|ja|月の宮廷}} ({{l|ja|つきのきゅうてい}}, ''tsuki-kyūtei''): lit. "''[[royal]] [[court]] of the moon''"
+* {{l|ja|月野兎}} ({{l|ja|つきのうさぎ}}, ''tsuki-no-usagi''): lit. the "''[[rabbit]] on the [[moon]]''"
 
 ===See also===
 {{top2}}
@@ -139,17 +148,6 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|毎月}} ({{l|ja|まいつき}}, [[maitsuki]]): [[every]] [[month]]
 * {{l|ja|月の側暗い}}: lit. the "''[[dark]] [[side]] of the [[moon]]''"
 {{bottom}}
-
-====Derived terms====
-* {{l|ja|中秋の名月}}: the "''[[mid|Mid]]-[[Autumn]] [[harvest moon|Harvest Moon]] [[festival|Festival]]''"
-* {{l|ja|収穫月}} ({{l|ja|しゅうかくげつ}}, ''shūkaku-getsu''): lit. the "''[[harvest moon]]''"
-* {{l|ja|猟師月}} ({{l|ja|りょうしげつ}}, ''ryōshi-getsu''): lit. the "''[[hunter's moon]]''"
-* {{l|ja|青月}} ({{l|ja|あおいげつ}}, ''aoigetsu''): lit. a/the "''[[blue moon]]''"
-* {{l|ja|月の都}} ({{l|ja|つきのみやこ}}, ''tsuki-no-miyako''): lit. the "''([[capital]]) [[city]] of the [[moon]]''" -- from [[w:The Tale of the Bamboo Cutter|The Tale of the Bamboo Cutter]]
-* {{l|ja|月の王国}} ({{l|ja|つきのおうこく}}, ''tsuki-no-ōkoku''): lit. the "''[[kingdom]] of the moon''" -- "''the Moon Kingdom''"
-* {{l|ja|月城}} ({{l|ja|つきしろ}}, ''tsuki-shiro''): lit. "''[[moon]] [[castle]]''"
-* {{l|ja|月宮殿}} ({{l|ja|つききゅうでん}}, ''tsuki-kyūden''): lit. "''[[moon]] [[palace]]''"
-* {{l|ja|月の宮廷}} ({{l|ja|つきのきゅうてい}}, ''tsuki-kyūtei''): lit. "''[[royal]] [[court]] of the moon''"
 
 ====References====
 {{ja-kref
