--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -54,7 +54,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 #:: '''{{l|ja|つき'''はちきゅうのゆいいつのえいせいです。}}
 #:: '''''Tsuki''' wa chikyū no yui'itsu no eisei desu.''
 #::: '''Moon''' is the only one [[satellite]] of the [[Earth]].
-# a [[month]]
+# the [[lunar]] [[cycle]], a [[month]]
 #: '''{{l|ja|月}}'''{{l|ja|に}}{{l|ja|一度}}{{l|ja|、}}{{l|ja|旅行}}{{l|ja|に}}{{l|ja|出かける|出かけ}}{{l|ja|ます。}}
 #:: '''{{l|ja|つき}}'''{{l|ja|'''にいちど、りょこうにでかけます。}}
 #:: '''''Tsuki''' ni ichido, ryokō ni dekake masu.''
@@ -63,8 +63,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 ===Noun===
 {{ja-noun|k|hira=つく|rom=tsuku}}
 
-# the [[moon]]
-# the [[lunar]] [[cycle]], a [[month]]
+# [[moon]]
 
 ====Derived terms====
 * {{l|ja|月夜}} (''tsukuyo'')
