--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -61,7 +61,7 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 #::: I go for a trip once a '''month'''.  
 
 ====Derived terms====
-* {{l|ja|月野姫}} ({{l|ja|つきのひめ}}, ''[[tsuki]]-no-[[hime]]''): lit the "''[[princess]] of the [[moon]]''" -- see ''Kaguya-hime'' from ''[[w:The Tale of the Bamboo Cutter|The Tale of the Bamboo Cutter]]''
+* {{l|ja|月野姫}} ({{l|ja|つきのひめ}}, ''[[tsuki]]-no-[[hime]]''): lit. the "''[[princess]] of the [[moon]]''" -- see ''Kaguya-hime'' from ''[[w:The Tale of the Bamboo Cutter|The Tale of the Bamboo Cutter]]''
 * {{l|ja|月の都}} ({{l|ja|つきのみやこ}}, ''tsuki-no-miyako''): lit. the "''([[capital]]) [[city]] of the [[moon]]''" -- from [[w:The Tale of the Bamboo Cutter|The Tale of the Bamboo Cutter]]
 * {{l|ja|月の王国}} ({{l|ja|つきのおうこく}}, ''tsuki-no-ōkoku''): lit. the "''[[kingdom]] of the moon''" -- "''the Moon Kingdom''"
 * {{l|ja|月城}} ({{l|ja|つきしろ}}, ''tsuki-shiro''): lit. "''[[moon]] [[castle]]''"
