--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -154,6 +154,9 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|猟師月}} ({{l|ja|りょうしげつ}}, ''ryōshi-getsu''): lit. the "''[[hunter's moon]]''"
 * {{l|ja|青月}} ({{l|ja|あおいげつ}}, ''aoigetsu''): lit. a/the "''[[blue moon]]''"
 
+====Synonyms====
+* (''the moon/[[lunar]]''): {{l|ja|太陰}}
+
 ====References====
 {{ja-kref
 |ku=2378
