--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -139,9 +139,10 @@ As part of a compound, should not be confused with [[⺼]], form of {{term|肉||
 * {{l|ja|月形}} (''tsukigata''; (or {{l|ja|月型}} (''tsukigata'')): a/the [[crescent moon]]
 * {{l|ja|三日月}} (''mikazuki''): a/the [[crescent moon]]
 * {{l|ja|凹月}} ({{l|ja|おうげつ}}, ''ōgetsu''/''āogetsu''): lit. "''[[concave]] moon''" - a [[crescent]] moon
-* {{l|ja|半月}} ({{l|ja|はんげつ}}, [[hangetsu]]): [[half moon]]
-* {{l|ja|凸月}} ({{l|ja|とつげつ}}, [[totsugetsu]]): [[gibbous moon]]
-* {{l|ja|満月}} ({{l|ja|まんげつ}}, [[mangetsu]]): [[full moon]]
+* {{l|ja|半月}} ({{l|ja|はんつき}}, ''[[hantsuki]]''): lit. [[half moon]]
+* {{l|ja|半月}} ({{l|ja|はんげつ}}, ''[[hangetsu]]''): lit. [[half moon]]
+* {{l|ja|凸月}} ({{l|ja|とつげつ}}, ''[[totsugetsu]]''): lit. "''[[convex]] moon'';" the [[gibbous moon]]
+* {{l|ja|満月}} ({{l|ja|まんげつ}}, ''[[mangetsu]]''): lit. [[full moon]]
 * {{l|ja|盛月}} or {{l|ja|増月}}: lit. "''[[heightening]]/[[increasing]] moon'';" [[waxing moon]]
 * {{l|ja|衰月}} or {{l|ja|減月}}: lit. "''[[declining]]/[[reducing]] moon'';" [[waning moon]]
 * {{l|ja|毎月}} ({{l|ja|まいつき}}, [[maitsuki]]): [[every]] [[month]]
