--- a/en/o/onesie-twosie.741286.wikitext
+++ b/en/o/onesie-twosie.741286.wikitext
@@ -5,3 +5,7 @@
 
 # {{idiomatic}} [[individually|Individually]] or in very small groups, rather in larger [[batches]]. 
 #:''Why don't you prepare a whole stack of handouts in advance rather than getting out the supplies each time, '''onsie-twosie'''?''
+
+===Noun===
+'''[[onesie]]-twosie'''
+#{{backgammon}} invented by Kyle Ray in an effort to beat his then-six-year-old son [[Mason Ray]] at backgammon.
