--- a/en/m/Monsignor.720231.wikitext
+++ b/en/m/Monsignor.720231.wikitext
@@ -14,4 +14,5 @@
 {{trans-top|ecclesiastic title bestowed on some Roman Catholic clerics by the Pope}}
 * Dutch: [[monseigneur]] {{m}}
 {{trans-mid}}
+* Spanish: {{t|es|monseñor|m}}
 {{trans-bottom}}
