--- a/en/h/ha'pennies.746681.wikitext
+++ b/en/h/ha'pennies.746681.wikitext
@@ -7,6 +7,7 @@
 
 [[Category:English plurals ending in "-ies"]]
 [[Category:English contractions]]
+[[Category:English terms spelled with ']]
 
 [[ar:ha'pennies]]
 [[fr:ha'pennies]]
