--- a/en/i/indwell.742111.wikitext
+++ b/en/i/indwell.742111.wikitext
@@ -1,14 +1,19 @@
 ==English==
+===Etymology===
+From {{prefix|in|dwell}}.
+
+===Pronunciation===
+*{{a|UK}} {{IPA|/ɪnˈdwɛl/}}
 
 ===Verb===
 {{en-verb}}
 
-# To [[exist]] within, especially as a spirit or driving force
+# To [[exist]] within, especially as a spirit or driving force.
+#*'''2009''', {{w|Diarmaid MacCulloch}}, ''A History of Christianity'', Penguin 2010, p. 224:
+#*:Diodore and Theodore were particularly galvanized to defend their point of view by their horror at Apollinaris's assertion that Christ was '''indwelled''' by the Logos, which replaced a human mind in him.
 
 ====Derived terms====
 * {{l|en|indwelling}}
-
-[[Category:English words prefixed with in-]]
 
 [[et:indwell]]
 [[vi:indwell]]
