--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -95,6 +95,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
 {{trans-mid}}
 * Latin: {{t|la|deinde}}, {{t|la|exinde}}
+* [[Luxembourgish]]: {{t|lb|dunn}}
 * Malay: [[tidak lama kemudian]]
 * Norwegian: {{t+|no|så}}, {{t|no|deretter}}, {{t+|no|siden}}
 * [[Old English]]: {{t-|ang|þa|alt=þā|xs=Old English}}
